chore (BookmarkConverter): 람다함수 변경
collect()-> toList()

resolve: #6